# ck-apstra-tauri

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SPECIFICATION.md  TEMP_CONVERSION_MAP_AUGMENTATION_REQUIREMENTS.md  api-docs.json  debug_log.txt  direct_test  direct_test.rs  index.html  package.json  test-dom-rendering.js  test_conversion_map.js  test_enhanced_conversion.js  test_excel.csv  test_lag_processing.js  test_loading_performance  test_loading_performance.rs  tsconfig.json  vite.config.test.ts  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json  test_loading_performance.rs
src-tauri/icons/macos/: apstra.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: action_processor.rs  apstra_api_handler.rs  apstra_config_handler.rs  conversion_map_handler.rs  data_parser.rs  enhanced_conversion_handler.rs  file_handler.rs  logging_handler.rs  mod.rs
src-tauri/src/domains/: mod.rs
src-tauri/src/models/: apstra_config.rs  conversion_map.rs  enhanced_conversion_map.rs  mod.rs  network_config.rs  processing_result.rs
src-tauri/src/services/: apstra_api_service.rs  apstra_config_service.rs  compatibility_service.rs  conversion_service.rs  excel_service.rs  mod.rs  (+4 more)
src-tauri/tests/: default_enhanced_conversion_test.rs  enhanced_conversion_command_test.rs  enhanced_conversion_performance_test.rs  excel_conversion_test.rs  external_column_test.rs  lag_mode_debug_test.rs  lag_mode_excel_integration_test.rs  lag_mode_excel_processing_debug_test.rs  lag_mode_test.rs  port_field_mapping_test.rs  speed_transformation_test.rs
(+195 files in other folders)
