[package]
name = "ck-apstra-tauri"
version = "0.1.0"
description = "Tauri-based Excel processing tool for Apstra network provisioning"
authors = ["Claude Code Assistant"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = [ "dialog-message", "fs-read-dir", "path-all", "dialog-open", "fs-write-file", "shell-open", "fs-read-file", "fs-create-dir", "dialog-save", "fs-remove-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Excel processing dependencies
calamine = "0.30.0"
csv = "1.3"
regex = "1.10"
lazy_static = "1.4"

# HTTP client for future network operations
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
